change in style

--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="body">
+<body>
     <header class="navigation">
         <h2 class="hd">I m developer </h2>
         <ul class="menu">
@@ -17,7 +17,7 @@
                 <a class="blog" href="/blogs.html">Blogs</a>
             </li>
             <li class="nav">
-                <a href="#">Projects</a>
+                <a href="/projects.html">Projects</a>
             </li>
             <li class="nav">
                 <a href="/index.html">Home</a>
