--- a/index.html
+++ b/index.html
@@ -6,25 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        h1 {
-            color: #6EE7B7;
-            text-align: center;
-        }
-
-        h2 {
-            color: #05386B;
-        }
-
-        span {
-            color: #05386B;
-        }
-    </style>
 </head>
 
-<body class= "body">
+<body>
     <header class="navigation">
         <h2 class="hd">I m developer </h2>
         <ul class="menu">
@@ -32,7 +18,7 @@
                 <a href="/blogs.html">Blogs</a>
             </li>
             <li class="nav">
-                <a href="#">Projects</a>
+                <a href="/projects.html">Projects</a>
             </li>
             <li class="nav">
                 <a class="home" href="/index.html">Home</a>
@@ -42,17 +28,19 @@
     <img class="hero" src="undraw_programmer_imem.svg">
     <section>
         <div class="center">
-            <h1> Ananya Singh <span>the Web Developer </span></h1>
-            <p> I am an undergraduate computer sciencee student and
-                I am learning how to program and make web applications. </p>
+            <h1 class="head">Ananya Singh <span class="span">the Web Developer</span></h1>
+            <p>
+                I am an undergraduate computer science student and
+                I am learning how to program and make web applications.
+            </p>
         </div>
     </section>
     <section class="off-white-section">
         <div class="center">
             <h2 class="container"> Technologies</h2>
             <p>
-                I am familiar with HTML5,CSS3,Git,Javascript,NodeJS,ReactJS,
-                Web Hosting,C and C++.
+                I am familiar with HTML5,CSS3,Git,Github,Javascript,NodeJS,ReactJS,
+                Web Hosting,C Programming and C++.
             </p>
         </div>
     </section>
@@ -63,7 +51,7 @@
             </h2>
             <p>I would like to showcase my work and thus,you can see
                 my projects hosted online. </p>
-            <a class="projects" href="#" target="_blank">See Projects</a>
+            <a class="projects" href="/projects.html" target="_blank">See Projects</a>
 
         </div>
     </section>
@@ -84,15 +72,16 @@
         </div>
         <ul class="foot-menu ">
             <li class="footer-list-item">
-                <a class="active" href="https://github.com/ananyasingh4"><i class="fa fa-github"
+                <a class="active" href="https://github.com/ananyasingh4"> <i class="fa fa-github"
                         aria-hidden="true">Github </i></a>
             </li>
             <li class="footer-list-item">
-                <a class="active" href="https://www.linkedin.com/in/ananya-singh-340a48214"> <i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</a>
+                <a class="active" href="https://www.linkedin.com/in/ananya-singh-340a48214">
+                    <i class="fa fa-linkedin-square" aria-hidden="true"> LinkedIn </i></a>
             </li>
             <li class="footer-list-item">
-                <a class="active" href="https://instagram.com/ananya__singhh_?utm_medium=copy_link"><i
-                        class="fa fa-instagram" aria-hidden="true"></i>Instagram</a>
+                <a class="active" href="https://instagram.com/ananya__singhh_?utm_medium=copy_link">
+                    <i class="fa fa-instagram" aria-hidden="true">Instagram </i></a>
             </li>
         </ul>
     </footer>
